k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simple-game
  labels:
    app: game-of-life
