k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-of-life
  namespace: simple-game
  labels:
    app: game-of-life
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: game-of-life
